--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="slide">
         <div class="item row">
             <div class="image">
-                <img src="images/watch 1.png" alt="">
+                <img src="watch 1.png" alt="">
             </div>
             <div class="content">
                 <div class="left">
@@ -104,7 +104,7 @@
         </div>
         <div class="item row">
             <div class="image">
-                <img src="images/watch 2.png" alt="">
+                <img src="watch 2.png" alt="">
             </div>
             <div class="content">
                 <div class="left">
@@ -131,7 +131,7 @@
         </div>
         <div class="item row">
             <div class="image">
-                <img src="images/watch 3.png" alt="">
+                <img src="watch 3.png" alt="">
             </div>
             <div class="content">
                 <div class="left">
@@ -174,9 +174,9 @@
             <div class="abt_img row">
                 <div class="abt_container_left row">
                     <div class="morph_container row">
-                        <img src="images/watch 1.png" alt="" class="morph_image">
-                        <img src="images/watch 2.png" alt="" class="morph_image">
-                        <img src="images/watch 3.png" alt="" class="morph_image">
+                        <img src="watch 1.png" alt="" class="morph_image">
+                        <img src="watch 2.png" alt="" class="morph_image">
+                        <img src="watch 3.png" alt="" class="morph_image">
                     </div>
                     <div class="box_container row">
                         <div class="box bx_one"></div>
@@ -217,7 +217,7 @@
         <div class="cart_slider row">
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 1.png" alt="" class="card_img">
+                    <img src="watch 1.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 1</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -234,7 +234,7 @@
             </div>
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 2.png" alt="" class="card_img">
+                    <img src="watch 2.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 2</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -251,7 +251,7 @@
             </div>
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 3.png" alt="" class="card_img">
+                    <img src="watch 3.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 3</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -268,7 +268,7 @@
             </div>
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 1.png" alt="" class="card_img">
+                    <img src="watch 1.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 4</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -285,7 +285,7 @@
             </div>
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 2.png" alt="" class="card_img">
+                    <img src="watch 2.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 5</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -302,7 +302,7 @@
             </div>
             <div class="cart_card" data-reveal>
                 <div class="card_content">
-                    <img src="images/watch 3.png" alt="" class="card_img">
+                    <img src="watch 3.png" alt="" class="card_img">
                     <h1 class="card_title sub_heading">watch 6</h1>
                     <div class="card_body">
                         <div class="card_star">
@@ -348,31 +348,31 @@
         </div>
         <div class="gallery_container">
             <div class="gallery_item tall" data-reveal>
-                <img src="images/gallery_img1.jpg" data-src>
+                <img src="gallery_img1.jpg" data-src>
                 <div class="sub_heading">Men's collection</div>
             </div>
             <div class="gallery_item wide" data-reveal>
-                <img src="images/gallery_img2.png" data-src>
+                <img src="gallery_img2.png" data-src>
                 <div class="sub_heading">women's collection</div>
             </div>
             <div class="gallery_item" data-reveal>
-                <img src="images/gallery_img3.jpg" data-src>
+                <img src="gallery_img3.jpg" data-src>
                 <div class="sub_heading">accessories</div>
             </div>
             <div class="gallery_item tall" data-reveal>
-                <img src="images/gallery_img4.jpg" data-src>
+                <img src="gallery_img4.jpg" data-src>
                 <div class="sub_heading">20% off collection</div>
             </div>
             <div class="gallery_item wide" data-reveal>
-                <img src="images/gallery_img5.png" data-src>
+                <img src="gallery_img5.png" data-src>
                 <div class="sub_heading">children's collection</div>
             </div>
             <div class="gallery_item" data-reveal>
-                <img src="images/gallery_img6.jpg" data-src>
+                <img src="gallery_img6.jpg" data-src>
                 <div class="sub_heading">most popular</div>
             </div>
             <div class="gallery_item rem" data-reveal>
-                <img src="images/gallery_img7.jpg" data-src>
+                <img src="gallery_img7.jpg" data-src>
                 <div class="sub_heading">luxury collection</div>
             </div>
         </div>
@@ -400,7 +400,7 @@
                     </div>
                     <figure class="testimonials_banner">
                         <div class="img_holder" style="--width: 512; --height: 684;">
-                            <img src="images/testi_img (5).jpg" width="512" height="684" class="img_cover">
+                            <img src="testi_img (5).jpg" width="512" height="684" class="img_cover">
                         </div>
                         <h3 class="watch_type">Luxury Watch</h3>
                     </figure>
@@ -417,7 +417,7 @@
                     </div>
                     <figure class="testimonials_banner">
                         <div class="img_holder" style="--width: 512; --height: 684;">
-                            <img src="images/testi_img (4).jpg" width="512" height="684" class="img_cover">
+                            <img src="testi_img (4).jpg" width="512" height="684" class="img_cover">
                         </div>
                         <h3 class="watch_type">Men's Watch</h3>
                     </figure>
@@ -434,7 +434,7 @@
                     </div>
                     <figure class="testimonials_banner">
                         <div class="img_holder" style="--width: 512; --height: 684;">
-                            <img src="images/testi_img (3).jpg" width="512" height="684" class="img_cover">
+                            <img src="testi_img (3).jpg" width="512" height="684" class="img_cover">
                         </div>
                         <h3 class="watch_type">Accessory Watch</h3>
                     </figure>
@@ -451,7 +451,7 @@
                     </div>
                     <figure class="testimonials_banner">
                         <div class="img_holder" style="--width: 512; --height: 684;">
-                            <img src="images/testi_img (2).jpg" width="512" height="684" class="img_cover">
+                            <img src="testi_img (2).jpg" width="512" height="684" class="img_cover">
                         </div>
                         <h3 class="watch_type">Women Watch</h3>
                     </figure>
@@ -468,7 +468,7 @@
                     </div>
                     <figure class="testimonials_banner">
                         <div class="img_holder" style="--width: 512; --height: 684;">
-                            <img src="images/testi_img (1).jpg" width="512" height="684" class="img_cover">
+                            <img src="testi_img (1).jpg" width="512" height="684" class="img_cover">
                         </div>
                         <h3 class="watch_type">Women Watch</h3>
                     </figure>
@@ -489,7 +489,7 @@
         <div class="blog_container row">
             <div class="blog_card" data-reveal="left">
                 <div class="blog_img">
-                    <img src="images/gallery_img1.jpg" alt="">
+                    <img src="gallery_img1.jpg" alt="">
                 </div>
                 <div class="blog_post">
                     <div class="watch_blog row">
@@ -507,7 +507,7 @@
             </div>
             <div class="blog_card" data-reveal="right">
                 <div class="blog_img">
-                    <img src="images/gallery_img1.jpg" alt="">
+                    <img src="gallery_img1.jpg" alt="">
                 </div>
                 <div class="blog_post">
                     <div class="watch_blog row">
@@ -525,7 +525,7 @@
             </div>
             <div class="blog_card" data-reveal="left">
                 <div class="blog_img">
-                    <img src="images/gallery_img1.jpg" alt="">
+                    <img src="gallery_img1.jpg" alt="">
                 </div>
                 <div class="blog_post">
                     <div class="watch_blog row">
